--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.0.27", features = ["derive", "cargo"] }
+chrono = "0.4.23"
+clap = { version = "4.0.27", features = ["derive", "cargo", "string"] }
+dotenv = "0.15.0"
+tokio = { version = "1.22.0", features = ["full"] }
