--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2021"
 chrono = "0.4.23"
 clap = { version = "4.0.27", features = ["derive", "cargo", "string"] }
 dotenv = "0.15.0"
+reqwest = "0.11.13"
 tokio = { version = "1.22.0", features = ["full"] }
