--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,6 @@ chrono = "0.4.23"
 clap = { version = "4.0.27", features = ["derive", "cargo", "string"] }
 dotenv = "0.15.0"
 reqwest = "0.11.13"
+sanitize_html = "0.7.0"
+strip-ansi-escapes = "0.1.1"
 tokio = { version = "1.22.0", features = ["full"] }
