--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ clap = { version = "4.0.27", features = ["derive", "cargo", "string"] }
 dotenv = "0.15.0"
 reqwest = "0.11.13"
 sanitize_html = "0.7.0"
+serde = "1.0.148"
 strip-ansi-escapes = "0.1.1"
 tokio = { version = "1.22.0", features = ["full"] }
