--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,17 +10,18 @@ chrono = "0.4.23"
 clap = { version = "4.0.27", features = ["derive", "cargo", "string"] }
 dotenv = "0.15.0"
 reqwest = "0.11.13"
-sanitize_html = "0.7.0"
 serde = "1.0.148"
 strip-ansi-escapes = "0.1.1"
 tokio = { version = "1.22.0", features = ["full"] }
 
+sanitize_html = { version = "0.7.0", optional = true }
 criterion = { version = "0.3", optional = true }
 indicatif = { version = "0.17.2", optional = true }
 duct = "0.13.6"
 
 
 [features]
-default = ["bench", "tally"]
+default = ["bench", "tally", "submit"]
 bench = ["criterion"]
 tally = ["indicatif"]
+submit = ["sanitize_html"]
