--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ sanitize_html = { version = "0.8.0", optional = true }
 criterion = { version = "0.5.1", optional = true }
 indicatif = { version = "0.17.2", optional = true }
 duct = "0.13.6"
+thiserror = "1.0.50"
 
 
 [features]
